--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tienda-router",
-  "homepage": "https://github.com/MARIAJOSE-SANCHEZ/NavegalasRutasSanchez",
+  "homepage": "https://MARIAJOSE-SANCHEZ/NavegalasRutasSanchez",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
